platform/ai/kubernetes/integrations/comfyui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: comfyui
  labels:
    app: comfyui
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    targetPort: 8188
  selector:
    app: comfyui
